tests/snapshots/examples_fixtures/type_system__failing__93_hm_match_arm_contextual_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/93_hm_match_arm_contextual_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Match Arm Type Mismatch

The arms of this `match` expression do not agree on a type.

  examples/type_system/failing/93_hm_match_arm_contextual_mismatch.flx:37:18
   |
36 |         true -> 1,
   |                 - first arm returns `Int`

   |                 - this arm established the expected type
37 |         false -> "no",
   |                  ^^^^
   |                  ---- arm 2 has type `String`

   |                  ---- arm 2 conflicts with that type

Note:
  first arm type: Int
  this arm type: String
  the first arm fixes the type expected from the whole `match`
  this arm produces the competing type

Help:
  Change arm 2 so every arm returns the same type.
== stdout ==
<not executed>
